correct alignment of action button icons

--- a/opentech/static_src/src/sass/apply/components/_button.scss
+++ b/opentech/static_src/src/sass/apply/components/_button.scss
@@ -165,6 +165,7 @@
             right: 15px;
             font-size: 30px;
             content: '+';
+            line-height: 1.2;
         }
 
         &.is-active {
